--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,17 @@ jobs:
 
       - name: run linter
         run: ./ci/scripts/lint-check.sh
+
+  test:
+    runs-on: ubuntu-latest
+    container:
+      image: hseeberger/scala-sbt:eclipse-temurin-11.0.14.1_1.6.2_2.13.8
+    steps:
+      - name: code checkout
+        uses: actions/checkout@v3
+
+      - name: chmod
+        run: chmod +x ./ci/scripts/test.sh
+
+      - name: test
+        run: ./ci/scripts/test.sh
